--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -2,15 +2,13 @@ name: deploy-container
 
 on:
   push:
-    branches: 
-      - master
+    branches: [ master ]
     paths:
       - "packages/container/**"
 
 defaults:
   run:
     working-directory: packages/container
-
 jobs:
   build:
     runs-on: ubuntu-latest
