--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -10,13 +10,13 @@ on:
       - 'packages/container/**'
   pull_request:
     branches: [ master ]
-
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 defaults:
   run:
     working-directory: packages/container
 
-  # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
